[package]
name = "my_mini_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
futures = "0.3"

[dev-dependencies]

[[test]]
name = "integration"
path = "tests/integration.rs"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"