[package]
name = "summary"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "summary"
path = "src/main.rs"

[dependencies]
task1 = { path = ".." }
task2 = { path = "../../task2" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
